[COM_PUBLICATIONS] Very minor tweaks to HTML and CSS to allow for easier styling across templates. Fixed minor issue with 'no results' message not showing.

--- a/core/components/com_publications/site/assets/css/publications.css
+++ b/core/components/com_publications/site/assets/css/publications.css
@@ -10,9 +10,9 @@
 	com_publications CSS
 	-- -- -- -- -- -- --
 */
-	.com_publications .inner {
+	/*.com_publications .inner {
 		background: #FFFFFF;
-	}
+	}*/
 	.com_publications .aside  {
 		border: none;
 	}
